[package]
name = "admin-sep"
version = "0.0.0"
edition = "2024"
publish = false
rust-version = "1.87.0"

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { version = "22.0.7" }
contracttrait-macro = { path = "../contracttrait-macro" }

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
